Fixed sneak right click while holding an item setting spawnpoint (It should only happen with no item held)