@@ -1,1 +1,2 @@
-Fixed sneak right click while holding an item setting spawnpoint (It should only happen with no item held)
+Fixed campfire being extinguished by spawn point lookup instead of after respawn
+Mod now requires Fireplace Lib
